advanced-detection-and-response-scenarios/guardduty-malware-protection/waf_ipset_acl.tf
#####################
# 20. WAF 차단용 IPSet 생성
#####################

resource "aws_wafv2_ip_set" "blocked_ips" {
  name               = "blocked-ipset"                         # IPSet 이름
  scope              = "REGIONAL"                              # 리전 단위 (ALB는 regional만 지원)
  ip_address_version = "IPV4"                                  # IPv4 전용 IPSet
  addresses          = []                                      # 초기에는 비어 있음 (추후 Lambda 등으로 추가)
}

#####################
# 21. WAF Web ACL 생성 (차단 룰 + 관리형 룰)
#####################

resource "aws_wafv2_web_acl" "web_acl" {
  name  = "waf-dvwa"                                           # WAF Web ACL 이름
  scope = "REGIONAL"                                           # ALB와 연결하기 위해 regional로 설정

  default_action {
    allow {}                                                   # 기본 동작은 허용 (명시적 차단 룰이 우선)
  }

  visibility_config {
    sampled_requests_enabled   = true                          # CloudWatch 샘플링 요청 로그 활성화
    cloudwatch_metrics_enabled = true                          # CloudWatch 지표 활성화
    metric_name                = "webACL"                      # 메트릭 이름
  }

  # 사용자 정의 IPSet 차단 룰
  rule {
    name     = "block-bad-ips"                                 # 룰 이름
    priority = 0                                               # 룰 우선순위 (낮을수록 먼저 평가됨)
    action {
      block {}                                                 # 요청 차단
    }
    statement {
      ip_set_reference_statement {
        arn = aws_wafv2_ip_set.blocked_ips.arn                 # 참조할 IPSet의 ARN
      }
    }
    visibility_config {
      sampled_requests_enabled   = true
      cloudwatch_metrics_enabled = true
      metric_name                = "block-bad-ips"             # CloudWatch 메트릭 이름
    }
  }

  # AWS 관리형 룰 추가 (CommonRuleSet)
  rule {
    name     = "managed-core"                                  # 룰 이름
    priority = 1                                               # 두 번째로 평가됨
    override_action {
      none {}                                                  # 기본 관리형 룰 액션을 따름 (보통 차단)
    }
    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesCommonRuleSet"           # AWS 제공 룰셋 이름
        vendor_name = "AWS"                                    # 제공자 이름
      }
    }
    visibility_config {
      sampled_requests_enabled   = true
      cloudwatch_metrics_enabled = true
      metric_name                = "managed-core"              # CloudWatch 메트릭 이름
    }
  }
}

#####################
# 22. Web ACL을 ALB에 연결
#####################

resource "aws_wafv2_web_acl_association" "alb_assoc" {
  resource_arn = aws_lb.alb.arn                                # WAF를 연결할 ALB의 ARN
  web_acl_arn  = aws_wafv2_web_acl.web_acl.arn                 # 연결할 WAF Web ACL의 ARN
}

#####################
# 23. WAF 로그 설정 (Firehose로 전송)
#####################

resource "aws_wafv2_web_acl_logging_configuration" "log_config" {
  resource_arn            = aws_wafv2_web_acl.web_acl.arn       # 로그를 수집할 Web ACL 대상
  log_destination_configs = [aws_kinesis_firehose_delivery_stream.waf_stream.arn]  # 전송 대상은 Firehose
}
