advanced-detection-and-response-scenarios/guardduty-malware-protection/vpc_network.tf
#####################
# 1. VPC
#####################

resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"            # VPC의 IP 주소 범위 (전체 65,536개 IP)
  enable_dns_hostnames = true                     # 퍼블릭 DNS 호스트네임 활성화
  tags = {
    Name = "waf-vpc"                              # VPC의 이름 태그 지정
  }
}

#####################
# 2. Subnet A (ap-northeast-2a)
#####################

resource "aws_subnet" "a" {
  vpc_id                  = aws_vpc.main.id       # 이 서브넷이 속할 VPC의 ID 지정
  cidr_block              = "10.0.1.0/24"         # 서브넷 IP 범위 (256개 IP 주소 사용 가능)
  availability_zone       = "ap-northeast-2a"     # 서브넷이 위치할 가용 영역
  map_public_ip_on_launch = true                  # 인스턴스 실행 시 퍼블릭 IP 자동 할당
  tags = {
    Name = "waf-subnet-a"                         # 서브넷 이름 태그 지정
  }
}

#####################
# 3. Subnet C (ap-northeast-2c)
#####################

resource "aws_subnet" "c" {
  vpc_id                  = aws_vpc.main.id       # 동일한 VPC에 연결
  cidr_block              = "10.0.2.0/24"         # 다른 서브넷 대역으로 IP 범위 지정
  availability_zone       = "ap-northeast-2c"     # 다른 가용 영역에 서브넷 구성
  map_public_ip_on_launch = true                  # 퍼블릭 IP 자동 할당
  tags = {
    Name = "waf-subnet-c"                         # 서브넷 이름 태그 지정
  }
}

#####################
# 4. Internet Gateway
#####################

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id                        # IGW를 연결할 VPC 지정
  tags = {
    Name = "waf-igw"                              # IGW 이름 태그
  }
}

#####################
# 5. Route Table
#####################

resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.main.id                        # 이 라우팅 테이블이 속할 VPC 지정
  tags = {
    Name = "waf-rt"                               # 라우팅 테이블 이름 태그
  }

  route {
    cidr_block = "0.0.0.0/0"                      # 모든 외부 트래픽을 대상으로 설정
    gateway_id = aws_internet_gateway.igw.id      # 인터넷 게이트웨이로 트래픽 전달
  }
}

#####################
# 6. Route Table Association
#####################

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.a.id                # Subnet A에 라우팅 테이블 연결
  route_table_id = aws_route_table.rt.id          # 연결할 라우팅 테이블 지정
}

resource "aws_route_table_association" "c" {
  subnet_id      = aws_subnet.c.id                # Subnet C에 라우팅 테이블 연결
  route_table_id = aws_route_table.rt.id          # 동일한 라우팅 테이블 사용
}
